# Multi-Agent-Code-Complexity

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  utils.py
.github/workflows/: timestamp.yml
agents/: analyst_agent.py  coder_agent.py  tester_agent.py
analysis/: complexity_metrics.csv  extract_metrics.py  make_figures.py  make_tables.py  run_stats.py  stats_descriptive.csv  stats_directional.csv  stats_meanranks.csv  stats_omnibus.csv  stats_posthoc.csv
analysis/tables/: tab_descriptive.md  tab_omnibus.md  tab_posthoc.md
flows/: AC_Debug_flow.py  analyst_coder_flow.py  analyst_coder_tester_flow.py  debugger_only_flow.py  debugger_utils.py  flow.py  llm_debugger_flow.py
outputs/gpt4o_generations/: gpt4o_ac_humaneval.jsonl  gpt4o_ac_humaneval.jsonl_results.jsonl  gpt4o_acdebugger_humaneval.jsonl  gpt4o_acdebugger_humaneval.jsonl_results.jsonl  gpt4o_act_humaneval.jsonl  gpt4o_act_humaneval.jsonl_results.jsonl  gpt4o_actdebugger_humaneval.jsonl  gpt4o_actdebugger_humaneval.jsonl_results.jsonl  gpt4o_basic_humaneval.jsonl  gpt4o_basic_humaneval.jsonl_results.jsonl  gpt4o_debugger_humaneval.jsonl  gpt4o_debugger_humaneval.jsonl_results.jsonl
outputs/gpt4omini_generations/: gpt4omini_ac.jsonl  gpt4omini_ac.jsonl_results.jsonl  gpt4omini_ac_debugger.jsonl  gpt4omini_ac_debugger.jsonl_results.jsonl  gpt4omini_act.jsonl  gpt4omini_act.jsonl_results.jsonl  gpt4omini_actdebugger_humaneval.jsonl  gpt4omini_actdebugger_humaneval.jsonl_results.jsonl  gpt4omini_basic_humaneval.jsonl  gpt4omini_basic_humaneval.jsonl_results.jsonl  (+2 more)
